tests/NormalTests/paczka1/fuzzy1/21923557.err
Error in line 5: a2YwZV8lm A558 30,8
Error in line 9: wqymUa3C A558 352,29
Error in line 12: wqymUa3C A558 240,3
Error in line 15: wqymUa3C S87 10,5
Error in line 21: a2YwZV8lm A418 274,6
Error in line 25: Y42 A418 16,1
Error in line 26: a2YwZV8lm A369 83,3
Error in line 11: 5C7tSCIcn A369 20,8
